--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>RGB Color Guessing Game</title>
-  <link rel="stylesheet" href="RGB Color Guessing Game.css">
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Bitter:400,700|Mansalva&display=swap" rel="stylesheet">
 
 
@@ -38,7 +38,7 @@
   
   
 
-  <script type="text/javascript" src="RGB Color Guessing Game.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 
 
   
